objects/mcdm_15__MarketingCloudLinkedJourney__c.object
<CustomObject>
    <description>Links a Salesforce Campaign and a Marketing Cloud Journey</description>
    <fields>
        <fullName>mcdm_15__ImmediateApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if approvals flow is enabled or not.</description>
        <label>Immediate Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__JourneyId__c</fullName>
        <description>Id of the Marketing Cloud Journey.</description>
        <label>Journey ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__JourneyName__c</fullName>
        <description>The name of the Marketing Cloud Journey.</description>
        <label>Journey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__LinkedBusinessUnit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Business Unit</label>
        <referenceTo>mcdm_15__LinkedBusinessUnit__c</referenceTo>
        <relationshipLabel>Linked Journeys</relationshipLabel>
        <relationshipName>Linked_Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ObjectId__c</fullName>
        <description>Id of the Salesforce object linked to the Journey.</description>
        <label>Object ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Linked Journey</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Linked Journey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>